--- a/styles.css
+++ b/styles.css
@@ -1,68 +1,45 @@
 body {
     font-family: Arial, sans-serif;
     padding: 20px;
-    background-color: #f9f9f9;
-}
-
-h1 {
-    color: #333;
-    text-align: center;
-}
-
-p {
-    text-align: center;
-    color: #666;
-}
-
-#searchInput {
-    margin-top: 10px;
-    padding: 10px;
-    width: 100%;
-    font-size: 16px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
 }
 
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-top: 20px;
-    background-color: #fff;
+    margin-top: 10px;
 }
 
 th, td {
     border: 1px solid #ddd;
-    padding: 12px;
+    padding: 8px;
     text-align: left;
+    cursor: pointer;
 }
 
 th {
     background-color: #f4f4f4;
-    cursor: pointer;
-}
-
-th:hover {
-    background-color: #e0e0e0;
+    position: relative;
 }
 
 th.sorted-asc::after {
-    content: " 🔼";
+    content: "\25B2"; /* Flèche vers le haut */
+    position: absolute;
+    right: 10px;
 }
 
 th.sorted-desc::after {
-    content: " 🔽";
+    content: "\25BC"; /* Flèche vers le bas */
+    position: absolute;
+    right: 10px;
 }
 
-tr:nth-child(even) {
-    background-color: #f2f2f2;
-}
-
-tr:hover {
-    background-color: #ddd;
+#searchInput {
+    margin-top: 10px;
+    padding: 5px;
+    width: 100%;
+    font-size: 16px;
 }
 
 img {
     width: 45px;
-    vertical-align: middle;
-    margin-right: 5px;
 }
