--- a/styles.css
+++ b/styles.css
@@ -32,23 +32,29 @@ th {
 }
 
 th::after {
-    content: " ⬍"; /* Flèche par défaut */
+    content: ""; /* Pas de flèche par défaut */
     position: absolute;
     right: 5px;
-    font-size: 30px;  /* Augmenter la taille de la flèche */
+    font-size: 30px;
+    opacity: 0; /* Pas de flèche par défaut */
+}
+
+/* Afficher les flèches uniquement pour les colonnes 2, 3, 4, et 6 */
+th[data-sortable="true"]::after {
+    content: " ⬍"; /* Flèche par défaut */
     opacity: 0.5;
 }
 
+/* Flèche triée ascendant */
 th.sorted-asc::after {
     content: " 🔼"; /* Flèche vers le haut */
     opacity: 1;
-    font-size: 30px;  /* Taille augmentée */
 }
 
+/* Flèche triée descendant */
 th.sorted-desc::after {
     content: " 🔽"; /* Flèche vers le bas */
     opacity: 1;
-    font-size: 30px;  /* Taille augmentée */
 }
 
 
